--- a/clickerGame/Base.lproj/Main.storyboard
+++ b/clickerGame/Base.lproj/Main.storyboard
@@ -31,7 +31,6 @@
                                 <buttonConfiguration key="configuration" style="filled" image="bitcoinsign.circle" catalog="system"/>
                                 <connections>
                                     <action selector="clickAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bir-oc-YDh"/>
-                                    <outletCollection property="gestureRecognizers" destination="kzh-OV-WDL" appends="YES" id="TEV-CF-gcs"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -51,16 +50,18 @@
                             </button>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="coinLabel" destination="VgV-8w-4pr" id="GrI-rR-l5K"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="kzh-OV-WDL"/>
             </objects>
             <point key="canvasLocation" x="1063.3587786259541" y="3.5211267605633805"/>
         </scene>
-        <!--View Controller-->
+        <!--View Controller2-->
         <scene sceneID="cl9-8n-hGp">
             <objects>
-                <viewController id="Kur-9F-lWh" sceneMemberID="viewController">
+                <viewController id="Kur-9F-lWh" customClass="ViewController2" customModule="clickerGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="I8M-ga-2tb">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -77,12 +78,18 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Upgrade 1"/>
+                                <connections>
+                                    <action selector="upgrade1Button:" destination="Kur-9F-lWh" eventType="touchUpInside" id="AVu-hN-Y2x"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gpS-10-DVd">
-                                <rect key="frame" x="144" y="481" width="105" height="35"/>
+                                <rect key="frame" x="144" y="540" width="105" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Upgrade 2"/>
+                                <connections>
+                                    <action selector="upgrade2Button:" destination="Kur-9F-lWh" eventType="touchUpInside" id="yYw-dh-IDG"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Upgrade 1 doubles your coin per click and cost 75" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RIv-Vk-W8E">
                                 <rect key="frame" x="57" y="228" width="278" height="72"/>
@@ -92,7 +99,21 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Upgrade 2 quadruples your coins per click and cost 500" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j3e-yQ-Gx9">
-                                <rect key="frame" x="57" y="398" width="278" height="57"/>
+                                <rect key="frame" x="57" y="444" width="278" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="secondarySystemBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9aE-PM-ehQ">
+                                <rect key="frame" x="57" y="364" width="278" height="72"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="secondarySystemBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wjs-ii-maC">
+                                <rect key="frame" x="57" y="605" width="278" height="75"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" systemColor="secondarySystemBackgroundColor"/>
@@ -103,6 +124,11 @@
                         <color key="backgroundColor" systemColor="systemGrayColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="abB-oF-ov3"/>
+                    <connections>
+                        <outlet property="error1Label" destination="Wjs-ii-maC" id="i4e-wR-v3E"/>
+                        <outlet property="error1Laebl" destination="9aE-PM-ehQ" id="zbh-ge-qji"/>
+                        <outlet property="error2Label" destination="Wjs-ii-maC" id="N5k-RB-QzR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wTj-fn-3dr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
